--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -2,9 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Weather App!</title>
-    <link rel="stylesheet" type="text/css" href="/css/style.css">
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'>
+    <title>To-Do!</title>
   </head>
   <body>
     <div class="container">
@@ -13,13 +11,6 @@
           <input name="city" type="text" class="ghost-input" placeholder="Enter a City" required>
           <input type="submit" class="ghost-button" value="Get Weather">
         </form>
-        <% if(weather !== null){ %>
-          <p><%= weather %></p>
-        <% } %>
-
-        <% if(error !== null){ %>
-          <p><%= error %></p>
-        <% } %>
       </fieldset>
     </div>
   </body>
